new migration (oops), some fixes

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -24,6 +24,10 @@ files =
     coreapp/**/*.py,
     decompme/**/*.py
 
+exclude =
+    compilers,
+    manage.py
+
 plugins =
     mypy_django_plugin.main,
     mypy_drf_plugin.main
