--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ django-environ = "^0.10.0"
 django-filter = "^23.2"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.6"
-responses = "^0.23.1"
+responses = "0.18.0"
 jwt = "^1.3.1"
 PyGithub = "^1.58.1"
 drf-extensions = "^0.7.1"
