--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,6 +89,7 @@
         "stylelint-config-standard-scss": "^9.0.0",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.0.4",
+        "umd-compat-loader": "^2.1.2",
         "webpack": "^5.81.0"
     },
     "browserslist": [
