Add default, site-wide .clang-format

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,6 +32,7 @@
   },
   "include": [
     "next-env.d.ts",
+    "custom-imports.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
