--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,5 +4,7 @@
         "dbaeumer.vscode-eslint",
         "stylelint.vscode-stylelint",
         "bradlc.vscode-tailwindcss",
+        "esbenp.prettier-vscode",
+        "svelte.svelte-vscode"
     ]
 }
