--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"tsconfig": "workspace:^",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
