--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,23 +1,29 @@
 {
-	"name": "app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tsconfig": "workspace:^",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
-	},
-	"type": "module"
+    "name": "app",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/kit": "^1.5.0",
+        "svelte": "^3.54.0",
+        "svelte-check": "^3.0.1",
+        "tsconfig": "workspace:^",
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^4.3.0",
+        "postcss": "^8.4.23",
+        "postcss-load-config": "^4.0.1",
+        "svelte-preprocess": "^5.0.3",
+        "autoprefixer": "^10.4.14",
+        "tailwindcss": "^3.3.1",
+        "sass": "^1.62.0"
+    },
+    "type": "module"
 }
