--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,20 +10,23 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "devDependencies": {
+        "@radix-ui/colors": "^0.1.8",
         "@sveltejs/adapter-auto": "^2.0.0",
         "@sveltejs/kit": "^1.5.0",
-        "svelte": "^3.54.0",
-        "svelte-check": "^3.0.1",
-        "tsconfig": "workspace:^",
-        "tslib": "^2.4.1",
-        "typescript": "^5.0.0",
-        "vite": "^4.3.0",
+        "autoprefixer": "^10.4.14",
         "postcss": "^8.4.23",
         "postcss-load-config": "^4.0.1",
+        "sass": "^1.62.0",
+        "svelte": "^3.54.0",
+        "svelte-check": "^3.0.1",
         "svelte-preprocess": "^5.0.3",
-        "autoprefixer": "^10.4.14",
         "tailwindcss": "^3.3.1",
-        "sass": "^1.62.0"
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^4.3.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "svelte-feather-icons": "^4.0.1"
+    }
 }
