--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,3 +1,14 @@
 {
-    "extends": "tsconfig/svelte.json"
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "extends": "../app/.svelte-kit/tsconfig.json",
+    "compilerOptions": {
+        "allowJs": true,
+        "checkJs": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true
+    }
 }
