--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "clean": "rm -rf .next node_modules"
     },
     "dependencies": {
+        "@clangd-wasm/clangd-wasm": "15.0.7-dev5",
         "@codemirror/autocomplete": "^6.6.0",
         "@codemirror/commands": "^6.2.4",
         "@codemirror/lang-cpp": "^6.0.2",
@@ -20,6 +21,7 @@
         "@codemirror/view": "^6.10.1",
         "@lezer/common": "^1.0.2",
         "@lezer/highlight": "^1.1.4",
+        "@open-rpc/client-js": "^1.8.1",
         "@primer/octicons-react": "^18.3.0",
         "@radix-ui/colors": "^0.1.8",
         "@react-hook/resize-observer": "^1.2.6",
@@ -49,7 +51,8 @@
         "sharp": "^0.32.1",
         "swr": "^1.3.0",
         "use-debounce": "^9.0.4",
-        "use-persisted-state": "^0.3.3"
+        "use-persisted-state": "^0.3.3",
+        "vscode-languageserver-protocol": "^3.17.3"
     },
     "devDependencies": {
         "@babel/core": "^7.21.8",
@@ -86,6 +89,7 @@
         "stylelint-config-standard-scss": "^9.0.0",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.0.4",
+        "umd-compat-loader": "^2.1.2",
         "webpack": "^5.81.0"
     },
     "browserslist": [
