--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "private": true,
-    "scripts": {
-      "build": "turbo run build",
-      "dev": "turbo run dev",
-      "lint": "turbo run lint",
-      "format": "prettier --write ."
-    },
-    "devDependencies": {
-      "eslint": "^8.0.0",
-      "eslint-config-custom": "workspace:*",
-      "prettier": "^2.7.1",
-      "prettier-plugin-svelte": "^2.7.0",
-      "turbo": "latest"
-    }
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "eslint-config-custom": "workspace:*",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
+    "turbo": "latest",
+    "typescript": "^5.0.0"
+  }
 }
