--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,9 @@ asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}
 sentry-sdk = "^1.14.0"
 django-session-timeout = "^0.1.0"
 django = "^4.1.7"
+pyyaml = "^6.0"
+uritemplate = "^4.1.1"
+drf-spectacular = "^0.26.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
