Add MS-DOS platform and Watcom compilers.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -62,8 +62,10 @@ ARG ENABLE_NDS_SUPPORT
 ARG ENABLE_PS1_SUPPORT
 ARG ENABLE_WII_GC_SUPPORT
 ARG ENABLE_SATURN_SUPPORT
+ARG ENABLE_MSDOS_SUPPORT
 RUN if [ "${ENABLE_NDS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_PS1_SUPPORT}" = "YES" ] || \
+       [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_WII_GC_SUPPORT}" = "YES" ]; then \
     dpkg --add-architecture i386 && apt-get update && \
     apt-get install -y -o APT::Immediate-Configure=false \
@@ -101,6 +103,7 @@ ENV ENABLE_NDS_SUPPORT=${ENABLE_NDS_SUPPORT}
 ENV ENABLE_PS1_SUPPORT=${ENABLE_PS1_SUPPORT}
 ENV ENABLE_SWITCH_SUPPORT=${ENABLE_SWITCH_SUPPORT}
 ENV ENABLE_SATURN_SUPPORT=${ENABLE_SATURN_SUPPORT}
+ENV ENABLE_MSDOS_SUPPORT=${ENABLE_MSDOS_SUPPORT}
 
 RUN python3.10 -m pip install requests tqdm \
     && python3.10 /compilers/download.py \
@@ -125,6 +128,7 @@ USER user
 # initialize wine files to /home/user/.wine
 RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_WII_GC_SUPPORT}" = "YES" ] || \
+       [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_NDS_SUPPORT}" = "YES" ]; then \
     wineboot --init; \
     fi
