--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
         ENABLE_NDS_SUPPORT: "NO"
         ENABLE_PS1_SUPPORT: "NO"
         ENABLE_WII_GC_SUPPORT: "NO"
+        ENABLE_MSDOS_SUPPORT: "NO"
         # dont install clang by default
         ENABLE_SWITCH_SUPPORT: "NO"
         ENABLE_SATURN_SUPPORT: "NO"
