--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
             binutils-mips-linux-gnu \
             binutils-powerpc-linux-gnu \
             binutils-sh-elf \
+            binutils-djgpp \
             dos2unix \
             libprotobuf-dev \
             libnl-route-3-dev \
