Remove noexec from /sandbox/tmp in docker
The MSVC toolchains store intermediate artifacts in the /sandbox/tmp
folder, and need to be able to mmap them with PROT_EXEC rights, which is
prevented by the noexec flag that docker automatically puts on all
tmpfs. To avoid this, we need to ask docker to remove that flag.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,7 +42,7 @@ services:
     tmpfs:
     # Use a separate tmpfs to prevent a rogue jailed process
     # from filling /tmp on the parent container
-    - /sandbox/tmp:uid=1000,gid=1000,size=64M,mode=0700
+    - /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700
   frontend:
     build: frontend
     environment:
