Initial commit of organizing things

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,7 @@
         "backend/decompme"
     ],
     "typescript.tsdk": "frontend/node_modules/typescript/lib",
-    "typescript.enablePromptUseWorkspaceTsdk": true
+    "typescript.enablePromptUseWorkspaceTsdk": true,
+    "python.linting.mypyEnabled": true,
+    "python.linting.enabled": true
 }
