--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
         # dont install wine32 etc by default
         ENABLE_NDS_SUPPORT: "NO"
         ENABLE_PS1_SUPPORT: "NO"
-        ENABLE_WII_GC_SUPPORT: "NO"
+        ENABLE_GC_WII_SUPPORT: "NO"
         ENABLE_MSDOS_SUPPORT: "NO"
         ENABLE_WIN9X_SUPPORT: "NO"
         # dont install clang by default
