--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,8 @@ sentry-sdk = "^1.21.1"
 django-session-timeout = "^0.1.0"
 django = "^4.2"
 requests = "^2.29.0"
+docker = "6.1.3"
+podman = "4.6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
