--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,7 @@ jobs:
           mkdir -p sandbox && chmod 777 sandbox
           mkdir -p local_files && chmod 777 local_files
           container_id=$(docker run \
+            --detach \
             -v $(pwd):/decomp.me \
             -v $(pwd)/local_files:/local_files \
             --security-opt apparmor=unconfined \
