--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,7 +192,7 @@ jobs:
 
           docker exec ${container_id} /bin/bash -c 'cd /decomp.me/backend && \
             poetry install && \
-            poetry run compilers/download.py --compiler-dir ${COMPILER_BASE_PATH} --podman --threads 1 && \
+            poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} --podman --threads 1 && \
             poetry run python manage.py test'
 
   frontend_lint:
