--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,11 +189,11 @@ jobs:
             -e USE_SANDBOX_JAIL=on \
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
-            decompme_backend -c 'podman system service --time=0 unix:///tmp/podman.sock')
+            decompme_backend -c 'podman system service --storage-driver vfs --time=0 unix:///tmp/podman.sock')
 
           docker exec ${container_id} /bin/bash -c 'cd /decomp.me/backend && \
             poetry install && \
-            poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} --podman --threads 1 && \
+            poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} --podman --threads 4 && \
             poetry run python manage.py test'
 
   frontend_lint:
