Don't use podman/docker to download compilers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,11 +197,11 @@ jobs:
             -e USE_SANDBOX_JAIL=on \
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
-            decompme_backend -c 'podman system service --time=0 unix:///tmp/podman.sock')
+            decompme_backend)
 
           docker exec ${container_id} /bin/bash -c 'cd /decomp.me/backend && \
             poetry install && \
-            poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} --podman && \
+            poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
             poetry run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
             poetry run python manage.py test'
 
