Fix nop scratch having family

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,8 +32,8 @@
     },
     "[python]": {
         "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.black-formatter",
     },
-    "python.formatting.provider": "black",
     "mypy.configFile": "backend/mypy.ini",
     "mypy.runUsingActiveInterpreter": true,
     "mypy.targets": [
