Fixup 'NDS' vs 'NDS_ARM9' platform id for Docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -63,13 +63,13 @@ COPY --from=nsjail /nsjail/nsjail /bin/nsjail
 COPY --from=ghcr.io/decompals/wibo:0.5.2 /usr/local/sbin/wibo /usr/bin/
 
 # windows compilers need i386 wine
-ARG ENABLE_NDS_SUPPORT
+ARG ENABLE_NDS_ARM9_SUPPORT
 ARG ENABLE_PS1_SUPPORT
 ARG ENABLE_GC_WII_SUPPORT
 ARG ENABLE_SATURN_SUPPORT
 ARG ENABLE_MSDOS_SUPPORT
 ARG ENABLE_WIN9X_SUPPORT
-RUN if [ "${ENABLE_NDS_SUPPORT}" = "YES" ] || \
+RUN if [ "${ENABLE_NDS_ARM9_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_PS1_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_WIN9X_SUPPORT}" = "YES" ] || \
@@ -110,7 +110,7 @@ ARG ENABLE_SWITCH_SUPPORT
 ENV ENABLE_GBA_SUPPORT=${ENABLE_GBA_SUPPORT}
 ENV ENABLE_GC_WII_SUPPORT=${ENABLE_GC_WII_SUPPORT}
 ENV ENABLE_N64_SUPPORT=${ENABLE_N64_SUPPORT}
-ENV ENABLE_NDS_SUPPORT=${ENABLE_NDS_SUPPORT}
+ENV ENABLE_NDS_ARM9_SUPPORT=${ENABLE_NDS_ARM9_SUPPORT}
 ENV ENABLE_PS1_SUPPORT=${ENABLE_PS1_SUPPORT}
 ENV ENABLE_SWITCH_SUPPORT=${ENABLE_SWITCH_SUPPORT}
 ENV ENABLE_SATURN_SUPPORT=${ENABLE_SATURN_SUPPORT}
@@ -138,7 +138,7 @@ RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_GC_WII_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_WIN9X_SUPPORT}" = "YES" ] || \
-       [ "${ENABLE_NDS_SUPPORT}" = "YES" ]; then \
+       [ "${ENABLE_NDS_ARM9_SUPPORT}" = "YES" ]; then \
     wineboot --init; \
     fi
 
